test/FAIL/assertcmd/invalid_arguments/14_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

assert byte 0 +